--- a/create task/index.html
+++ b/create task/index.html
@@ -9,13 +9,16 @@
   <body>
     <div id="app"></div>
     
-    <div id="dropdown">
+    <div id="buttons">
           <button id="mario">mario</button>
           <button id="zelda">zelda</button>
           <button id="kirby">kirby</button>
           <button id="ac">animal crossing</button>
           <button id="metroid">metroid</button>
           <button id="splatoon">splatoon</button>
+    </div>
+    <div id="container">
+      
     </div>
     <script type="module" src="/main.js"></script>
   </body>
